manifests/04-network-policy/tenant-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tenant-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tenant-2
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
