manifests/04-network-policy/np-allow-from-tenant1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-tenant-1
  namespace: tenant-2
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tenant-1
