manifests/04-network-policy/np-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: tenant-2
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
